# 3D-Rendering-Game-Engine-OpenGL

./: CMakeLists.txt  GameEngine.cpp  README.md
Assets/Models/cube/: cube.mtl
Core/: Application.cpp  Application.h  CameraLayer.cpp  CameraLayer.h  Event.h  EventDispatcher.h  Events.h  GameTime.cpp  GameTime.h  Input.cpp  Input.h  InputLayer.cpp  InputLayer.h  Layer.h  MouseInputs.cpp  MouseInputs.h  TimeLayer.cpp  WindowLayer.cpp  WindowLayer.h
ECS/: Components.h  GPUStructs.cpp  GpuStructs.h  System.h  SystemManager.cpp  SystemManager.h
Editor/: UILayer.cpp  UILayer.h
Renderer/: Mesh.cpp  Mesh.h  RendererLayer.cpp  RendererLayer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Rendering/: Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  RendererLayer.cpp  RendererLayer.h  RendererManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h
Rendering/Terrain/: Terrain.cpp  Terrain.h
Scene/: Components.h  SceneLayer.cpp  SceneLayer.h
Shaders/: cube.f  cube.v  debug.f  debug.v  default.f  default.v  quad.f  quad.v  ray.f  ray.v  shadow.v
Systems/: 3rdPersonCameraSystem.cpp  3rdPersonCameraSystem.h  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  RotationSystem.cpp  RotationSystem.h
